fixed hero font spacing, allow going back to maps page from locations page

--- a/src/assets/css/HomePage.css
+++ b/src/assets/css/HomePage.css
@@ -143,7 +143,6 @@
 
 .carousel_text {
     position: absolute;
-    width: 1167px;
     height: 50px;
     left: 173px;
     top: 169px;
@@ -155,7 +154,7 @@
     line-height: 100px;
     display: flex;
     align-items: center;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.06em;
 
     /* Off yellow */
 
@@ -346,6 +345,7 @@
     align-items: flex-start;
     gap: 10px;
     padding-left: 6px;
+    cursor: pointer;
 
     position: absolute;
     left: 67.01%;
@@ -1073,6 +1073,7 @@ top: 84px; */
     width: 280px;
     height: 382px;
     padding: 10px;
+    margin: 10px;
 }
 
 .rectange_30 {
