--- a/src/pages/LocationPage/LocationPage.css
+++ b/src/pages/LocationPage/LocationPage.css
@@ -6,6 +6,7 @@
     top: 154px;
     bottom: 94.75%;
     font-size: 30px;
+    cursor: pointer;
 }
 
 .share3{
